--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 								<img src="img/icon_dmail.png" class="message" />
 								邮箱：1293803937@qq.com
 							</p>
-							<p> 本人数字媒体应用技术专业，有责任心、待人诚恳、做事认真，热爱本职工作，有团队精神,有良好的沟通能力及协调能力,
-								喜欢团队合作。肯吃苦耐劳，勇于进取</p>
+							<p>本人 熟练掌握Html5、Css3、Bootstrap、Vant等技能。有较好的逻辑思维；喜欢浏览技术论坛，热爱本职工作，有团队精神，有良好的沟通能力及协调能力，有较强的学习能力和探索精神，喜欢团队合作。肯吃苦耐劳，勇于进取。</p>
 						</div>
 						<!-- 本人的照片 -->
 						<div class="col-lg-4 col-md-12">
@@ -236,30 +235,30 @@
 							<div class="col-md-6">
 								<h3 class="subtitle"></h3>
 								<div class="item">
-									<div class="date"><span>2018 - 2019</span></div>
+									<div class="date"><span>2019 - 2020</span></div>
 									<div class="content">
-										<h4>>广西水利电力职业技术学院</h4>
+										<h4>>广西金岸网络科技有限公司</h4>
 										<p></p>
 									</div>
 								</div>
 								<div class="item">
-									<div class="date"><span>2018 - 2019</span></div>
+									<div class="date"><span>2019 - 2020</span></div>
 									<div class="content">
-										<h4>>广西水利电力职业技术学院</h4>
+										<h4>>广西金岸网络科技有限公司</h4>
 										<p></p>
 									</div>
 								</div>
 								<div class="item">
-									<div class="date"><span>2018 - 2019</span></div>
+									<div class="date"><span>2019 - 2020</span></div>
 									<div class="content">
-										<h4>>广西水利电力职业技术学院</h4>
+										<h4>>广西金岸网络科技有限公司</h4>
 										<p></p>
 									</div>
 								</div>
 								<div class="item">
-									<div class="date"><span>2019-2020</span></div>
+									<div class="date"><span>2019 - 2020</span></div>
 									<div class="content">
-										<h4>>广西水利电力职业技术学院</h4>
+										<h4>>广西金岸网络科技有限公司</h4>
 										<p></p>
 									</div>
 								</div>
@@ -269,37 +268,37 @@
 							<div class="col-md-6 mt-50">
 								<h3 class="subtitle"></h3>
 								<div class="item">
-									<div class="date"><span>2020.6-2020.10</span></div>
+									<div class="date"><span>2019 - 2020</span></div>
 									<div class="content">
 										<h4>
-											<>广西厚溥教育有限公司
+											<>广西金岸网络科技有限公司
 										</h4>
 										<p></p>
 									</div>
 								</div>
 								<div class="item">
-									<div class="date"><span>2020.6-2020.10</span></div>
+									<div class="date"><span>2019 - 2020</span></div>
 									<div class="content">
 										<h4>
-											<>广西厚溥教育有限公司
+											<>广西金岸网络科技有限公司
 										</h4>
 										<p></p>
 									</div>
 								</div>
 								<div class="item">
-									<div class="date"><span>2020.6-2020.10</span></div>
+									<div class="date"><span>2019 - 2020</span></div>
 									<div class="content">
 										<h4>
-											<>广西厚溥教育有限公司
+											<>广西金岸网络科技有限公司
 										</h4>
 										<p></p>
 									</div>
 								</div>
 								<div class="item">
-									<div class="date"><span>2020.6-2020.10</span></div>
+									<div class="date"><span>2019 - 2020</span></div>
 									<div class="content">
 										<h4>
-											<>广西厚溥教育有限公司
+											<>广西金岸网络科技有限公司
 										</h4>
 										<p></p>
 									</div>
